Fetches Data, Pushes to Google Cloud Console SQL

--- a/fetch_store_data.ipynb
+++ b/fetch_store_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
       "\u001b[0;31mOperationalError\u001b[0m: connection to server at \"34.150.9.71\", port 5432 failed: Operation timed out\n\tIs the server running on that host and accepting TCP/IP connections?\n",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[82], line 71\u001b[0m\n\u001b[1;32m     67\u001b[0m DB_NAME \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mecommerce-db\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     69\u001b[0m engine \u001b[38;5;241m=\u001b[39m sqlalchemy\u001b[38;5;241m.\u001b[39mcreate_engine(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpostgresql://\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDB_USER\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDB_PASSWORD\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m@\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDB_HOST\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:5432/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDB_NAME\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 71\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mengine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m conn:\n\u001b[1;32m     72\u001b[0m   conn\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;124m    CREATE TABLE products (\u001b[39m\n\u001b[1;32m     74\u001b[0m \u001b[38;5;124m      id SERIAL PRIMARY KEY,\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[38;5;124m  \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m    111\u001b[0m   )\n",
+      "Cell \u001b[0;32mIn[3], line 71\u001b[0m\n\u001b[1;32m     67\u001b[0m DB_NAME \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mecommerce-db\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     69\u001b[0m engine \u001b[38;5;241m=\u001b[39m sqlalchemy\u001b[38;5;241m.\u001b[39mcreate_engine(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpostgresql://\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDB_USER\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDB_PASSWORD\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m@\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDB_HOST\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:5432/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDB_NAME\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 71\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mengine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m conn:\n\u001b[1;32m     72\u001b[0m   conn\u001b[38;5;241m.\u001b[39mexecute(text(\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;124m    DROP TABLE IF EXISTS products, carts_main, cart_products, users CASCADE;\u001b[39m\n\u001b[1;32m     74\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[38;5;124m    );\u001b[39m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;124m  \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m))\n\u001b[1;32m    114\u001b[0m \u001b[38;5;66;03m# Insert data into Cloud SQL\u001b[39;00m\n",
       "File \u001b[0;32m/opt/anaconda3/envs/myenv/lib/python3.10/site-packages/sqlalchemy/engine/base.py:3274\u001b[0m, in \u001b[0;36mEngine.connect\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   3251\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mconnect\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Connection:\n\u001b[1;32m   3252\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return a new :class:`_engine.Connection` object.\u001b[39;00m\n\u001b[1;32m   3253\u001b[0m \n\u001b[1;32m   3254\u001b[0m \u001b[38;5;124;03m    The :class:`_engine.Connection` acts as a Python context manager, so\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3271\u001b[0m \n\u001b[1;32m   3272\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 3274\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_connection_cls\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/anaconda3/envs/myenv/lib/python3.10/site-packages/sqlalchemy/engine/base.py:148\u001b[0m, in \u001b[0;36mConnection.__init__\u001b[0;34m(self, engine, connection, _has_events, _allow_revalidate, _allow_autobegin)\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dbapi_connection \u001b[38;5;241m=\u001b[39m engine\u001b[38;5;241m.\u001b[39mraw_connection()\n\u001b[1;32m    147\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m dialect\u001b[38;5;241m.\u001b[39mloaded_dbapi\u001b[38;5;241m.\u001b[39mError \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m--> 148\u001b[0m         \u001b[43mConnection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_handle_dbapi_exception_noconnection\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    149\u001b[0m \u001b[43m            \u001b[49m\u001b[43merr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdialect\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mengine\u001b[49m\n\u001b[1;32m    150\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    151\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
       "File \u001b[0;32m/opt/anaconda3/envs/myenv/lib/python3.10/site-packages/sqlalchemy/engine/base.py:2439\u001b[0m, in \u001b[0;36mConnection._handle_dbapi_exception_noconnection\u001b[0;34m(cls, e, dialect, engine, is_disconnect, invalidate_pool_on_disconnect, is_pre_ping)\u001b[0m\n\u001b[1;32m   2437\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m should_wrap:\n\u001b[1;32m   2438\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m sqlalchemy_exception \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 2439\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m sqlalchemy_exception\u001b[38;5;241m.\u001b[39mwith_traceback(exc_info[\u001b[38;5;241m2\u001b[39m]) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01me\u001b[39;00m\n\u001b[1;32m   2440\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   2441\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m exc_info[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
@@ -127,10 +127,12 @@
     "engine = sqlalchemy.create_engine(f\"postgresql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:5432/{DB_NAME}\")\n",
     "\n",
     "with engine.connect() as conn:\n",
-    "  conn.execute(\"\"\"\n",
+    "  conn.execute(text(\"\"\"\n",
+    "    DROP TABLE IF EXISTS products, carts_main, cart_products, users CASCADE;\n",
+    "\n",
     "    CREATE TABLE products (\n",
-    "      id SERIAL PRIMARY KEY,\n",
-    "      title VARCHAR(100),\n",
+    "      product_id SERIAL PRIMARY KEY,\n",
+    "      product_name VARCHAR(100),\n",
     "      price NUMERIC,\n",
     "      description VARCHAR(800),\n",
     "      category VARCHAR(20),\n",
@@ -141,13 +143,13 @@
     "\n",
     "    CREATE TABLE carts_main (\n",
     "      cart_id INT PRIMARY KEY,\n",
-    "      user_id INT,\n",
+    "      user_id INT REFERENCES users(user_id),\n",
     "      order_date DATE\n",
     "    );\n",
     "\n",
     "    CREATE TABLE cart_products (\n",
-    "      cart_id INT,\n",
-    "      product_id INT,\n",
+    "      cart_id INT REFERENCES carts_main(cart_id),\n",
+    "      product_id INT REFERENCES products(product_id),\n",
     "      quantity INT,\n",
     "      PRIMARY KEY (cart_id, product_id)\n",
     "    );\n",
@@ -165,14 +167,13 @@
     "      number INT,\n",
     "      zipcode VARCHAR(10)\n",
     "    );\n",
-    "  \"\"\"\n",
-    "  )\n",
+    "  \"\"\"))\n",
     "\n",
     "# Insert data into Cloud SQL\n",
-    "df.to_sql(\"products\", engine, if_exists=\"replace\", index=False)\n",
-    "df.to_sql(\"carts_main\", engine, if_exists=\"replace\", index=False)\n",
-    "df.to_sql(\"cart_products\", engine, if_exists=\"replace\", index=False)\n",
-    "df.to_sql(\"users\", engine, if_exists=\"replace\", index=False)\n",
+    "products.to_sql(\"products\", engine, if_exists=\"replace\", index=False)\n",
+    "carts_main.to_sql(\"carts_main\", engine, if_exists=\"replace\", index=False)\n",
+    "cart_products.to_sql(\"cart_products\", engine, if_exists=\"replace\", index=False)\n",
+    "users.to_sql(\"users\", engine, if_exists=\"replace\", index=False)\n",
     "print(\"Data successfully inserted into Cloud SQL.\")\n"
    ]
   }
